# first-C-P-P-project

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  COPYING.txt  README.md  first C ++ project.cpp  first C ++ project.h  main.cpp  myfunctions.h
